# i18n

./: .gitignore  LICENSE  README.md  conanfile.txt
libintl_gettext/: CMakeLists.txt  main.cpp  main.po
libintl_gettext/cmake/: gettext.cmake
